# qa-z

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  qa-z.yaml  qa-z.yaml.example
.github/: pull_request_template.md
benchmark/: README.md
docs/: README.md  agent-merge-safety-benchmark.md  architecture.md  artifact-schema-v1.md  benchmarking.md  case-studies.md  community-distribution.md  comparison.md  current-truth-maintenance-anchors.md  demo-output.md  demo-script.md  docs-site.md  generated-vs-frozen-evidence-policy.md  github-action.md  hosted-demo.md  launch-checklist.md  launch-package.md  launch-posts.md  monthly-benchmark-report-template.md  mvp-issues.md  package-publish-plan.md  pr-summary-comment.md  pre-live-executor-safety.md  public-roadmap.md  quickstart.md  repair-sessions.md  scorecard.md  use-with-claude-code.md  use-with-codex.md  use-with-cursor.md  use-with-semgrep.md
examples/: README.md
scripts/: alpha_release_artifact_smoke.py  alpha_release_artifact_smoke_support.py  alpha_release_bundle_manifest.py  alpha_release_bundle_manifest_support.py  alpha_release_gate.py  alpha_release_gate_evidence.py  alpha_release_preflight.py  alpha_release_preflight_evidence.py  runtime_artifact_cleanup.py  runtime_artifact_cleanup_support.py  worktree_commit_plan.py  worktree_commit_plan_support.py
templates/: AGENTS.md  CLAUDE.md
tests/: __init__.py  alpha_release_artifact_smoke_test_support.py  alpha_release_bundle_manifest_test_support.py  alpha_release_gate_test_support.py  alpha_release_preflight_test_support.py  ast_test_support.py  benchmark_test_support.py  conftest.py  executor_result_test_support.py  github_summary_test_support.py  repair_prompt_test_support.py  runtime_artifact_cleanup_test_support.py  self_improvement_test_support.py  test_alpha_release_artifact_smoke.py  test_alpha_release_artifact_smoke_architecture.py  test_alpha_release_bundle_manifest.py  test_alpha_release_bundle_manifest_architecture.py  test_alpha_release_gate.py  test_alpha_release_gate_architecture.py  test_alpha_release_gate_cli.py  test_alpha_release_gate_environment.py  test_alpha_release_gate_evidence.py  test_artifact_schema.py  (+241 more)
(+790 files in other folders)
